Fixing bug regarding Handscore comparison